--- a/index.html
+++ b/index.html
@@ -86,11 +86,8 @@
         <div class="container">
             <h2>Be the First to Get Access</h2>
             <p>Join our waitlist to lock in the Founder's Program pricing. We'll notify you the moment we launch. No commitment required.</p>
-            <form id="waitlist-form">
-                <input type="email" id="email-input" placeholder="Enter your email address" required>
-                <button type="submit" class="cta-button">Join Waitlist</button>
-            </form>
-            <p id="form-response"></p>
+            <iframe data-tally-src="https://tally.so/embed/mRE5Xl?hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="120" frameborder="0" marginheight="0" marginwidth="0" title="Be the first to get access"></iframe>
+            <script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
         </div>
     </section>
 
@@ -100,6 +97,6 @@
         </div>
     </footer>
 
-    <script src="js/script.js"></script>
+    
 </body>
 </html>
