Update hero section subtitle and revise waitlist section messaging for clarity and urgency

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section class="hero">
         <div class="container">
             <h1>Keep Your SAPE Workflow. Meet the SFTP Requirement.</h1>
-            <p class="subtitle">SapeBridge connects Amadeus's new SFTP system directly to your local computers, so you can keep your workflow without managing a server.</p>
+            <p class="subtitle">SapeBridge connects Amadeus's new SFTP system directly to your local computers, so you can keep your workflow without managing a server. With a quick and easy onboarding process, enterprise-grade reliability, and end-to-end encryption, we make compliance simple and secure.</p>
             <a href="#waitlist" class="cta-button">Join the Founder's Program</a>
         </div>
     </section>
@@ -94,8 +94,8 @@
 
     <section id="waitlist" class="cta-section">
         <div class="container">
-            <h2>Be the First to Get Access</h2>
-            <p>Join our waitlist to lock in the Founder's Program pricing. We'll notify you the moment we launch. No commitment required.</p>
+            <h2>Get Ready for the January 1st Deadline</h2>
+            <p>Amadeus requires all agencies to be off SAPE by January 1, 2026. Join our waitlist to lock in Founder's Program pricing and ensure you're compliant in time. We'll notify you the moment we launch. No commitment required.</p>
             <iframe data-tally-src="https://tally.so/embed/mRE5Xl?hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="120" frameborder="0" marginheight="0" marginwidth="0" title="Be the first to get access"></iframe>
             <script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
         </div>
